# athena

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  launch-athena (for P16 Gen 3).sh  launch-athena.sh  orpheus-speak.cpp  talk-llama.cpp  valperf.sh
streaming-version-patch/: launch-athena.sh  orpheus-speak (further-lag-fix).cpp  orpheus-speak (improved streaming).cpp  orpheus-speak (original streaming).cpp  potential-optimizations-for-P16.md  speak-daemon.sh  talk-llama.cpp
